...
        <Stack.Screen name="material-evaluation" options={{ headerShown: false }} />
        <Stack.Screen name="material/[id]" options={{ headerShown: false }} />
        <Stack.Screen name="summary/[id]" options={{ headerShown: false }} />
        <Stack.Screen name="upload" options={{ headerShown: false }} />
        <Stack.Screen name="modal" options={{ presentation: 'modal', title: 'Modal' }} />
        <Stack.Screen name="pdf-viewer" options={{ headerBackVisible: false }} />
        <Stack.Screen name="auth" options={{ title: 'FeUpload', headerBackVisible: false }} />
        <Stack.Screen name="complete-profile" options={{ headerShown: false }} />
      </Stack>
      <StatusBar style={p.isDark ? 'light' : 'dark'} />
    </NavThemeProvider>
  );
}
...
